          bin/ADMIN_archive_log_tables.pl,
          docs/SIP_EVENT_LOGGING.txt,
          extras/MySQL_AST_CREATE_tables.sql,
          extras/mysql_update/mysql-1567.sql,
          extras/upgrade_2.14.sql,
          www/agc/conf_exten_check.php,
          www/agc/vdc_db_query.php,
          www/agc/vicidial.php: Added campaign SIP Actions processing; Added
            logtable SIP Action.
    * Add upstream Rev. 3135 - 3136, 3138, 3141 - 3143:
      - Update: www/vicidial/call_report_export.php,
          www/vicidial/call_report_export_carrier.php,
          www/vicidial/lead_report_export.php,
          www/vicidial/list_download.php,
          www/vicidial/AST_CLOSER_service_level.php,
          www/vicidial/AST_CLOSERstats.php,
          www/vicidial/AST_CLOSERstats_v2.php,
          www/vicidial/AST_rt_whiteboard_rpt.php,
          www/vicidial/AST_timeonVDADall.php,
          www/vicidial/AST_timeonVDADallSUMMARY.php,
          www/vicidial/admin.php,
          www/vicidial/realtime_report.php,
          www/agc/active_list_refresh.php,
          www/agc/astguiclient.php,
          www/agc/call_log_display.php,
          www/agc/inbound_popup.php,
          www/agc/live_exten_check.php,
          www/agc/park_calls_display.php,
          www/agc/timeclock.php,
          www/agc/vdc_script_dispo_example.php,
          www/agc/vicidial-grey.php,
          agi/cm.agi,
          www/vicidial/AST_AMD_log_report.php,
          www/vicidial/AST_API_log_report.php,
          www/vicidial/AST_CLOSERsummary_hourly.php,
          www/vicidial/AST_CMstats.php,
          www/vicidial/AST_DIDstats.php,
          www/vicidial/AST_DIDstats_v2.php,
          www/vicidial/AST_IVRstats.php,
          www/vicidial/AST_LISTS_campaign_stats.php,
          www/vicidial/AST_LISTS_pass_report.php,
          www/vicidial/AST_OUTBOUNDsummary_interval.php,
          www/vicidial/AST_SIP_event_report.php,
          www/vicidial/AST_VDADstats.php,